--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,20 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files and directory #
 *.jar
 *.war
 *.ear
 *.zip
 *.tar.gz
 *.rar
+/target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IntelliJ IDEA
+/.idea/
+
+# Gradle
+/.gradle/
